# OdroidC4-SD-Device-Driver

./: .gitignore  CMakeLists.txt  Makefile  README.md
endian_test/: endian  endian.c
mmc/: CMakeLists.txt  Makefile  mmc.system
mmc/include/: arith.h  bcm_emmc.h  bcm_emmc_regs.h  bcm_gpio_regs.h  bcm_mmc.h  bcm_timer.h  bcm_timer_regs.h  bcm_uart.h  bcm_uart_regs.h  blksizecnt.h  cid.h  cmd_index.h  cmd_rspns_type.h  cmdtm.h  control0.h  control1.h  csd.h  e2e_test.h  fatfs.h  fatfs_e2e.h  gpio.h  gpio_driver.h  gpio_fix_resistor.h  gpio_mode.h  interrupt.h  irpt_en.h  irpt_mask.h  log.h  memory_facade.h  mmc.h  mmc_driver.h  mmc_driver_client.h  mmc_driver_e2e.h  oc4_emmc.h  oc4_emmc_regs.h  oc4_gpio_regs.h  oc4_timer.h  oc4_timer_regs.h  oc4_uart.h  oc4_uart_regs.h  (+28 more)
mmc/src/: bcm_mmc.c  bcm_mmc_regs.c  bcm_uart_regs.c  delays.c  e2e_test.c  fatfs.c  fatfs_e2e.c  gpio_driver.c  mmc.c  mmc_driver.c  mmc_driver_e2e.c  sd.c  serial_client.c  serial_driver.c  shared_dma.c  timer_driver.c  uart.c
mmc/src/common/: arith.c  log.c  memory_facade.c  result.c  sel4cp_facade.c  timer_client.c
mmc/src/gpio_driver/: bcm_gpio_regs.c  gpio_fix_resistor.c  gpio_mode.c  oc4_gpio_regs.c
mmc/src/lib_assert/: assert.c  assert.h
mmc/src/lib_blk_ring_buf/: blk_data_buf.c  blk_data_buf.h  blk_data_queue.h  blk_data_ring_buf.c  blk_data_ring_buf.h  blk_req_buf.h  blk_req_queue.h  blk_req_ring_buf.c  blk_req_ring_buf.h  blk_res_buf.h
mmc/src/lib_blk_sddf/: blk_data_queue.c  blk_data_queue.h  blk_req.c  blk_req.h  blk_req_buf.c  blk_req_buf.h  blk_req_queue.c  blk_req_queue.h  blk_request_queue.c  blk_request_queue.h  blk_res.c  blk_res.h  blk_res_buf.c  blk_res_buf.h  blk_response.h  blk_response_queue.c  blk_response_queue.h  blk_shared_data_queue.c  blk_shared_data_queue.h
mmc/src/lib_clock/: clock.c  clock.h
mmc/src/lib_fatfs/: diskio.c  diskio.h  diskio_test.c  diskio_test.h  ffconf.h
mmc/src/lib_printf/: printf.c  printf.h
mmc/src/lib_result/: result.c  result.h  result_prod.c  result_prod.h  result_test.c  result_test.h
mmc/src/lib_sddf_blk/: blk_request.c  blk_request.h  blk_request_queue.c  blk_request_queue.h  blk_response.c  blk_response.h  blk_response_queue.c  blk_response_queue.h  blk_shared_data_buf.c  blk_shared_data_buf.h  blk_shared_data_queue.c  blk_shared_data_queue.h
mmc/src/lib_sleep/: sleep.c  sleep.h
mmc/src/lib_time/: time.c  time.h
mmc/src/libsharedringbuffer/include/: shared_ringbuffer.h
mmc/src/mmc/: bcm_emmc_regs.c
mmc/src/mmc_driver/: bcm_emmc.c  bcm_emmc_regs.c  oc4_emmc.c  oc4_emmc_regs.c  sdcard.c  sdhci.c  sdhci_regs.c
mmc/src/mmc_driver/bcm_emmc_regs/: cmdtm.c  control0.c  control1.c  interrupt.c  irpt_en.c  status.c
mmc/src/mmc_driver/oc4_emmc_regs/: blksizecnt.c  control1.c  interrupt.c  irpt_mask.c  slotisr_ver.c  status.c
mmc/src/mmc_driver/oc4_emmc_regs/cmdtm/: cmd_index.c  cmd_rspns_type.c
mmc/src/mmc_driver/sdcard/: cid.c  csd.c  ocr.c  scr.c  sdcard_data.c  sdcard_type.c
mmc/src/mmc_driver/sdcard/sdcard_data/: csd.c  sdcard_data_v1.c  sdcard_data_v2.c
mmc/src/mmc_driver/sdhci/: sdhci_cmd.c  sdhci_cmds.c  sdhci_command.c  sdhci_commands.c  sdhci_resp_r1.c  sdhci_resp_r6.c  sdhci_result.c
mmc/src/mmc_driver_client/: mmc_driver_client.c
mmc/src/serial_driver/: oc4_uart.c  oc4_uart_regs.c  serial_parity.c
mmc/src/timer_driver/: bcm_timer.c  bcm_timer_regs.c  oc4_timer.c  oc4_timer_regs.c
mmc_test/: CMakeLists.txt
mmc_test/libfff/: CMakeLists.txt
mmc_test/libfff/src/: fff.c
mmc_test/unit/: CMakeLists.txt
mmc_test/unit/common/: test_arith.cpp
mmc_test/unit/lib_blk_ring_buf/: test_blk_data_ring_buf.cpp  test_blk_req_ring_buf.cpp
mmc_test/unit/lib_blk_sddf/: test_blk_data_queue.cpp  test_blk_req_queue.cpp  test_blk_request_queue.cpp
mmc_test/unit/lib_result/: test_result_prod.cpp  test_result_test.cpp
mmc_test/unit/lib_sddf_blk/: test_blk_request.cpp  test_blk_request_queue.cpp  test_blk_response.cpp  test_blk_response_queue.cpp  test_blk_shared_data_buf.cpp  test_blk_shared_data_queue.cpp
mmc_test/unit/mmc/: test_bcm_emmc_regs.cpp
mmc_test/unit/mmc/bcm_emmc_regs/: test_control1.cpp
mmc_test/unit/mmc/common/: test_result.cpp
mmc_test/unit/mmc_driver/: test_bcm_emmc.cpp  test_bcm_emmc_regs.cpp  test_sdcard.cpp  test_sdhci.cpp
mmc_test/unit/mmc_driver/bcm_emmc_regs/: test_blksizecnt.cpp  test_cmdtm.cpp  test_control0.cpp  test_control1.cpp  test_interrupt.cpp
mmc_test/unit/mmc_driver/common/: test_result.cpp
mmc_test/unit/mmc_driver/sdcard/: test_scr.cpp
mmc_test/unit/mmc_driver/sdcard/sdcard_data/: test_sdcard_data_v2.cpp
mmc_test/unit/mmc_driver/sdhci/: test_sdhci_cmd.cpp  test_sdhci_cmds.cpp  test_sdhci_resp_r1.cpp
mmc_test/unit/mmc_driver_client/: test_mmc_driver_client.cpp
mmc_test/unit/timer_driver/: test_bcm_timer.cpp  test_bcm_timer_regs.cpp
odroidc4_build_dir/: loader.img  report.txt
resources/: bcm2710-rpi-3-b-plus.dts
sel4cp-sdk-1.2.6/board/imx8mm_evk/benchmark/: config.json
sel4cp-sdk-1.2.6/board/imx8mm_evk_2_cores/release/: config.json
sel4cp-sdk-1.2.6/board/imx8mm_evk_4_cores/debug/: config.json
sel4cp-sdk-1.2.6/board/imx8mm_evk_4_cores_hyp/benchmark/: config.json
sel4cp-sdk-1.2.6/board/imx8mq_evk/debug/: config.json
sel4cp-sdk-1.2.6/board/imx8mq_evk/release/: config.json
sel4cp-sdk-1.2.6/board/jetson_tx2/release/: config.json
sel4cp-sdk-1.2.6/board/odroidc2/release/: config.json
sel4cp-sdk-1.2.6/board/odroidc2_hyp/benchmark/: config.json
sel4cp-sdk-1.2.6/board/odroidc2_hyp/debug/: config.json
sel4cp-sdk-1.2.6/board/odroidc2_hyp/release/: config.json
sel4cp-sdk-1.2.6/board/odroidc4/benchmark/: config.json
sel4cp-sdk-1.2.6/board/odroidc4/debug/: config.json
sel4cp-sdk-1.2.6/board/odroidc4_hyp/release/: config.json
sel4cp-sdk-1.2.6/board/qemu_arm_virt/debug/: config.json
sel4cp-sdk-1.2.6/board/qemu_arm_virt/release/: config.json
sel4cp-sdk-1.2.6/board/qemu_arm_virt_hyp/benchmark/: config.json
serial/: serial.system
serial/include/: serial_driver.h  serial_parity.h  util.h
serial/src/: bcm_uart.c  serial_client.c  serial_driver.c
(+133 files in other folders)
