
add_executable(test_mmc_rpi3b_lib_arith common/test_arith.cpp)
add_executable(test_mmc_rpi3b_lib_control0 mmc_driver/bcm_emmc_regs/test_control0.cpp)
add_executable(test_mmc_rpi3b_lib_control1 mmc_driver/bcm_emmc_regs/test_control1.cpp)
add_executable(test_mmc_rpi3b_lib_interrupt mmc_driver/bcm_emmc_regs/test_interrupt.cpp)
add_executable(test_mmc_rpi3b_lib_cmdtm mmc_driver/bcm_emmc_regs/test_cmdtm.cpp)
add_executable(test_mmc_rpi3b_lib_blksizecnt mmc_driver/bcm_emmc_regs/test_blksizecnt.cpp)
add_executable(test_mmc_rpi3b_lib_bcm_emmc_regs mmc_driver/test_bcm_emmc_regs.cpp)
add_executable(test_mmc_rpi3b_lib_bcm_emmc mmc_driver/test_bcm_emmc.cpp)
add_executable(test_mmc_rpi3b_lib_sdhci mmc_driver/test_sdhci.cpp)
add_executable(test_mmc_rpi3b_lib_sdhci_cmd mmc_driver/sdhci/test_sdhci_cmd.cpp)
add_executable(test_mmc_rpi3b_lib_sdhci_cmds mmc_driver/sdhci/test_sdhci_cmds.cpp)
add_executable(test_mmc_rpi3b_lib_sdhci_resp_r1 mmc_driver/sdhci/test_sdhci_resp_r1.cpp)
add_executable(test_mmc_rpi3b_lib_sdcard mmc_driver/test_sdcard.cpp)
add_executable(test_mmc_rpi3b_lib_sdcard_data_v2 mmc_driver/sdcard/sdcard_data/test_sdcard_data_v2.cpp)
add_executable(test_mmc_rpi3b_lib_result_test lib_result/test_result_test.cpp)
add_executable(test_mmc_rpi3b_lib_result_prod lib_result/test_result_prod.cpp)
add_executable(test_mmc_rpi3b_lib_bcm_timer_regs timer_driver/test_bcm_timer_regs.cpp)
add_executable(test_mmc_rpi3b_lib_bcm_timer timer_driver/test_bcm_timer.cpp)
add_executable(test_mmc_rpi3b_lib_scr mmc_driver/sdcard/test_scr.cpp)
add_executable(test_mmc_rpi3b_lib_blk_data_ring_buf lib_blk_ring_buf/shared_data/test_blk_data_ring_buf.cpp)

add_google_test(test_mmc_rpi3b_lib_arith mmc_rpi3b_lib_arith)
add_google_test(test_mmc_rpi3b_lib_control0 mmc_rpi3b_lib_control0)
add_google_test(test_mmc_rpi3b_lib_control1 mmc_rpi3b_lib_control1)
add_google_test(test_mmc_rpi3b_lib_interrupt mmc_rpi3b_lib_interrupt)
add_google_test(test_mmc_rpi3b_lib_cmdtm mmc_rpi3b_lib_cmdtm)
add_google_test(test_mmc_rpi3b_lib_blksizecnt mmc_rpi3b_lib_blksizecnt)
add_google_test(test_mmc_rpi3b_lib_bcm_emmc_regs mmc_rpi3b_lib_bcm_emmc_regs)
add_google_test(test_mmc_rpi3b_lib_bcm_emmc mmc_rpi3b_lib_bcm_emmc)
add_google_test(test_mmc_rpi3b_lib_sdhci mmc_rpi3b_lib_sdhci)
add_google_test(test_mmc_rpi3b_lib_sdhci_cmd mmc_rpi3b_lib_sdhci_cmd)
add_google_test(test_mmc_rpi3b_lib_sdhci_cmds mmc_rpi3b_lib_sdhci_cmds)
add_google_test(test_mmc_rpi3b_lib_sdhci_resp_r1 mmc_rpi3b_lib_sdhci_resp_r1)
add_google_test(test_mmc_rpi3b_lib_sdcard mmc_rpi3b_lib_sdcard)
add_google_test(test_mmc_rpi3b_lib_sdcard_data_v2 mmc_rpi3b_lib_sdcard_data_v2)
add_google_test(test_mmc_rpi3b_lib_result_test mmc_rpi3b_lib_result_test)
add_google_test(test_mmc_rpi3b_lib_result_prod mmc_rpi3b_lib_result_prod)
add_google_test(test_mmc_rpi3b_lib_bcm_timer_regs mmc_rpi3b_lib_bcm_timer_regs)
add_google_test(test_mmc_rpi3b_lib_bcm_timer mmc_rpi3b_lib_bcm_timer)
add_google_test(test_mmc_rpi3b_lib_scr mmc_rpi3b_lib_scr)
add_google_test(test_mmc_rpi3b_lib_blk_data_ring_buf mmc_rpi3b_lib_blk_data_ring_buf)

target_link_libraries(
        test_mmc_rpi3b_lib_bcm_emmc
        lib_fff
)
target_link_libraries(
        test_mmc_rpi3b_lib_bcm_emmc_regs
        lib_fff
)
target_link_libraries(
        test_mmc_rpi3b_lib_bcm_timer
        lib_fff
)
target_link_libraries(
        test_mmc_rpi3b_lib_sdhci
        lib_fff
)
target_link_libraries(
        test_mmc_rpi3b_lib_sdcard
        lib_fff
)
target_link_libraries(
        test_mmc_rpi3b_lib_sdcard_data_v2
        lib_fff
)
